# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-06-03 13:05:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-75

    Summary:
      documentation, update i18n chapter
    Revision:
      itools--main--0.9--patch-75


    modified files:
     Changelog doc/i18n.tex


2005-06-03 11:58:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-74

    Summary:
      gettext, PO handler serializes the messages ordered
    Revision:
      itools--main--0.9--patch-74


    modified files:
     Changelog gettext/PO.py i18n/igettext.py


2005-06-03 11:56:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-73

    Summary:
      gettext, remove obsolete N_
    Revision:
      itools--main--0.9--patch-73


    modified files:
     Changelog gettext/domains.py


2005-06-02 18:52:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-72

    Summary:
      merge fuzzy support from the 0.8 branch
    Revision:
      itools--main--0.9--patch-72

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-98
       merge PO fuzzy from Nicolas Oyez
    
     * noyez@itaapy.com--private/itools--PO-Flags--0.8--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.8--patch-97
    
     * noyez@itaapy.com--private/itools--PO-Flags--0.8--patch-1
       handle the fuzzy flags during deserialisation of PO file
    
     * noyez@itaapy.com--private/itools--PO-Flags--0.8--patch-2
       change some print in the test_po.py file
    
     * noyez@itaapy.com--private/itools--PO-Flags--0.8--patch-3
       make next_line and next_entry generatrice function in PO.py
    
     * noyez@itaapy.com--private/itools--PO-Flags--0.8--patch-4
       add the get_translation method to PO.py
    
     * noyez@itaapy.com--private/itools--PO-Flags--0.8--patch-5
       replace the get_msgstr method by the get_translation method and fix a bug in the syntactic analysis concerning fuzzy tag for PO files